--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -124,7 +124,11 @@
             aria-controls="Slider-{{ section.id }}"
           >
             <span class="svg-wrapper">
-              {{- 'icon-caret.svg' | inline_asset_content -}}
+              {% comment %} {{- 'icon-caret.svg' | inline_asset_content -}} {% endcomment %}
+              <img
+                style="transform: rotate(180deg);"
+                src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Group_252.png?v=1737363649"
+              >
             </span>
           </button>
         </div>
