--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -187,7 +187,8 @@
           class="{% if section.settings.view_all_style == 'link' %}link underlined-link{% elsif section.settings.view_all_style == 'solid' %}button{% else %}button button--secondary{% endif %}"
           aria-label="{{ 'sections.featured_collection.view_all_label' | t: collection_name: section.settings.collection.title | escape }}"
         >
-          {{ 'sections.featured_collection.view_all' | t }}
+          {% comment %} {{ 'sections.featured_collection.view_all' | t }} {% endcomment %}
+          SHOP ALL BEST SELLERS
         </a>
       </div>
     {%- endif -%}
