--- a/sections/home-deal-of-the-day.liquid
+++ b/sections/home-deal-of-the-day.liquid
@@ -22,7 +22,7 @@
         card_product: section.settings.product_1,
         show_secondary_image: true,
         lazy_load: true,
-        quick_add: true,
+        quick_add: 'standard',
         section_id: section.id,
         horizontal_class: true,
         horizontal_quick_add: true,
@@ -34,7 +34,7 @@
         card_product: section.settings.product_2,
         show_secondary_image: true,
         lazy_load: true,
-        quick_add: true,
+        quick_add: 'standard',
         section_id: section.id,
         horizontal_class: true,
         horizontal_quick_add: true,
@@ -46,7 +46,7 @@
         card_product: section.settings.product_3,
         show_secondary_image: true,
         lazy_load: true,
-        quick_add: true,
+        quick_add: 'standard',
         section_id: section.id,
         horizontal_class: true,
         horizontal_quick_add: true,
