--- a/sections/home-categories-section.liquid
+++ b/sections/home-categories-section.liquid
@@ -27,21 +27,20 @@
   </div>
 </div>
 <style>
-  .home-gender-categories-container .section-heading {
-    margin: 0 0 30px;
-  }
   .home-gender-categories-container {
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    height: 570px;
+    overflow: hidden;
+    height: fit-content;
     flex-direction: column;
+    padding-bottom: 50px;
   }
   .home-gender-categories-background-image {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 120%;
     object-fit: cover;
     z-index: -1;
   }
@@ -49,7 +48,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 250px;
+    width: 220px;
     height: auto;
     z-index: 99;
   }
@@ -57,7 +56,7 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 250px;
+    width: 220px;
     height: auto;
     z-index: 99;
   }
