home page new sections

--- a/assets/base.css
+++ b/assets/base.css
@@ -297,7 +297,7 @@ h1,
 .h1 {
   font-size: calc(var(--font-heading-scale) * 3rem);
   font-family: 'Kanit', sans-serif;
-  color: #392d43;
+  color: #382D43;
 }
 
 @media only screen and (min-width: 750px) {
