--- a/sections/home-combos.liquid
+++ b/sections/home-combos.liquid
@@ -118,6 +118,40 @@
     justify-content: center;
     align-items: center;
   }
+  @media (max-width: 1200px) {
+    .home-combos-slider-button--next {
+      right: 40px;
+    }
+    .home-combos-slider-button--prev {
+      left: 40px;
+    }
+  }
+  @media (max-width: 500px) {
+    .carousel-track .card-wrapper {
+      min-width: 195px;
+    }
+    .carousel-track a {
+      font-size: 2rem;
+      text-align: left;
+    }
+    .carousel-track span {
+      font-size: 1.6rem;
+    }
+    .carousel-track .price__container {
+      align-items: start;
+      justify-content: start;
+    }
+    .home-combos-slider-button--next {
+      right: 30px;
+      width: 30px;
+      top: 25%;
+    }
+    .home-combos-slider-button--prev {
+      left: 30px;
+      width: 30px;
+      top: 25%;
+    }
+  }
 </style>
 
 <script>
