--- a/sections/home-discreet-packaging.liquid
+++ b/sections/home-discreet-packaging.liquid
@@ -1,5 +1,10 @@
 <div class="home-discreet-packaging">
-  <img src="{{section.settings.image | img_url: 'master'}}" alt="Discreet Packaging">
+  <img class="discreet_desktop_image" src="{{section.settings.image | img_url: 'master'}}" alt="Discreet Packaging">
+  <img
+    class="discreet_mobile_image"
+    src="{{section.settings.mobile_image | img_url: 'master'}}"
+    alt="Discreet Packaging"
+  >
   <button>{{ section.settings.button_text }}</button>
 </div>
 
@@ -27,6 +32,26 @@
     border-radius: 500px;
     border: 0;
   }
+  .discreet_desktop_image {
+    display: flex;
+  }
+  .discreet_mobile_image {
+    display: none;
+  }
+  @media (max-width: 850px) {
+    .discreet_desktop_image {
+      display: none;
+    }
+    .discreet_mobile_image {
+      display: flex;
+    }
+    .home-discreet-packaging img {
+      width: 100%;
+    }
+    .home-discreet-packaging button {
+      bottom: 20px;
+    }
+  }
 </style>
 
 {% schema %}
@@ -37,6 +62,11 @@
       "type": "image_picker",
       "id": "image",
       "label": "Image"
+    },
+    {
+      "type": "image_picker",
+      "id": "mobile_image",
+      "label": "Mobile Image"
     },
     {
       "type": "text",
