--- a/sections/shoppable-videos.liquid
+++ b/sections/shoppable-videos.liquid
@@ -111,6 +111,14 @@
     text-decoration: line-through;
     color: #00000070;
   }
+  @media (max-width: 500px) {
+    .shoppable-video-block {
+      min-width: 220px;
+    }
+    .shoppable-videos {
+      margin-left: 10px;
+    }
+  }
 </style>
 
 {% schema %}
