--- a/sections/home-categories-section.liquid
+++ b/sections/home-categories-section.liquid
@@ -90,7 +90,7 @@
     height: auto;
   }
   .gender-category-heading {
-    color: #392d43;
+    color: #382d43;
     font-family: 'Kanit', sans-serif;
     margin: 0;
     font-size: 2.3rem;
@@ -101,6 +101,33 @@
     margin: 0;
     font-size: 1.5rem;
     line-height: 2.3rem;
+  }
+  @media (max-width: 1200px) {
+    .home-gender-categories-right-image,
+    .home-gender-categories-left-image {
+      width: 140px;
+    }
+  }
+  @media (max-width: 850px) {
+    .gender-categories-loop-parent {
+      flex-wrap: wrap;
+    }
+    .home-gender-categories-container a {
+      width: 270px;
+    }
+  }
+  @media (max-width: 500px) {
+    .home-gender-categories-container a {
+      width: 44%;
+    }
+    .home-gender-categories-container .gender-category-block-arrow {
+      top: 174px;
+    }
+    .home-gender-categories-right-image,
+    .home-gender-categories-left-image {
+      width: 100px;
+      z-index: -1;
+    }
   }
 </style>
 {% schema %}
